# NewBLE

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
ble-client/: Cargo.toml
ble-client/src/: main.rs
ble-server/: Cargo.toml
ble-server/src/: main.rs
src/: main.rs  uart_cpp.txt  util.rs
